# biolitminer

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  test_article_fetching.py
.github/workflows/: lint.yml
src/biolitminer/: cli.py
src/biolitminer/core/: logging_config.py  models.py  version.py
src/biolitminer/dashboard/: app.py
src/biolitminer/dashboard/components/: export.py  results.py  search.py  sidebar.py
src/biolitminer/data/: pubmed_client.py
tests/: test_models.py  test_pubmed_client.py
