[project]
name = "biolitminer"
version = "0.1.0"
description = "A biomedical literature mining tool with knowledge graph construction and interactive visualization"
authors = [
    {name = "Lina L Faller",email = "lina.faller@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.9"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "plotly (>=6.2.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
